--- a/Posetrix.Avalonia/Views/FolderAddView.axaml
+++ b/Posetrix.Avalonia/Views/FolderAddView.axaml
@@ -13,6 +13,9 @@
         MinHeight="400"
         x:Class="Posetrix.Avalonia.Views.FolderAddView"
         x:DataType="viewModels:MainViewModel">
+    <Design.DataContext>
+        <viewModels:MainViewModel />
+    </Design.DataContext>
     <Window.Styles>
         <Style Selector="TextBlock.list">
             <Setter Property="FontSize" Value="14" />
