--- a/Posetrix.Avalonia/Views/PredefinedIntervalsView.axaml
+++ b/Posetrix.Avalonia/Views/PredefinedIntervalsView.axaml
@@ -2,8 +2,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:vm="using:Posetrix.Core.ViewModels"
              mc:Ignorable="d"
              x:Class="Posetrix.Avalonia.Views.PredefinedIntervalsView">
+    <Design.DataContext>
+        <vm:PredefinedIntervalsViewModel />
+    </Design.DataContext>
     <Grid ColumnDefinitions="*,*,*,*,*,*">
         <ToggleButton
             Grid.Column="0"
