--- a/Posetrix.Avalonia/Views/SessionView.axaml
+++ b/Posetrix.Avalonia/Views/SessionView.axaml
@@ -17,40 +17,42 @@
             <converters:SkiaSharpImageLoader x:Key="ImageLoader" />
         </ResourceDictionary>
     </Window.Resources>
-    <Grid RowDefinitions="Auto, 10*, Auto, Auto" Margin="20" ShowGridLines="True">
-        <UniformGrid Grid.Row="0" Columns="2">
-            <TextBlock Text="{Binding SessionInfo}" />
-            <TextBlock HorizontalAlignment="Right" Text="HH:MM:SS" />
+    <Design.DataContext>
+        <vm:SessionViewModel />
+    </Design.DataContext>
+    <Grid RowDefinitions="Auto, 10*, Auto, Auto" Margin="20">
+        <UniformGrid Grid.Row="0" Columns="3" Margin="0 0 0 10">
+            <TextBlock Text="{Binding SessionInfo}" VerticalAlignment="Center" HorizontalAlignment="Left" />
+            <!-- Image editing buttons -->
+            <StackPanel
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Orientation="Horizontal"
+                Spacing="6">
+                <Button Classes="small button-icon" Content="&#xE3E2;" />
+                <Button Classes="small button-icon" Content="&#xEC8C;" />
+                <Button Classes="small button-icon" Content="&#xED6A;" />
+                <Button Classes="small button-icon" Content="&#xE492;" />
+                <Button Classes="small button-icon" Content="&#xE92A;" Click="Button_OnClick" />
+            </StackPanel>
+            <TextBlock HorizontalAlignment="Right" Text="HH:MM:SS" VerticalAlignment="Center" />
         </UniformGrid>
         <!-- <Svg Grid.Row="1" Path="avares://Posetrix.Avalonia/Assets/Images/Enthusiastic-pana.svg" /> -->
         <Image Name="ImageControl" Grid.Row="1" Source="{Binding CurrentImage, Converter={StaticResource ImageLoader}}">
             <Image.RenderTransform>
                 <ScaleTransform ScaleX="1" ScaleY="1">
-
                 </ScaleTransform>
             </Image.RenderTransform>
         </Image>
-
-        <!-- Image editing buttons -->
-        <StackPanel
-            Grid.Row="2"
-            Margin="0,10"
-            HorizontalAlignment="Center"
-            VerticalAlignment="Center"
-            Orientation="Horizontal">
-            <Button Classes="small button-icon" Content="&#xE3E2;" />
-            <Button Classes="small button-icon" Content="&#xEC8C;" />
-            <Button Classes="small button-icon" Content="&#xED6A;" />
-            <Button Classes="small button-icon" Content="&#xE492;" />
-            <Button Classes="small button-icon" Content="&#xE92A;" Click="Button_OnClick" />
-        </StackPanel>
 
         <!-- Control buttons. -->
         <StackPanel
             Grid.Row="3"
             HorizontalAlignment="Center"
             VerticalAlignment="Center"
-            Orientation="Horizontal">
+            Orientation="Horizontal"
+            Margin="0 10 0 0"
+            Spacing="6">
             <Button Classes="big button-icon" Content="&#xE138;" Command="{Binding SelectPreviousImageCommand}"
                     IsEnabled="{Binding CanSelectPreviousImage}" />
             <Button Classes="big button-icon" Content="&#xE39E;" />
@@ -58,7 +60,6 @@
                     IsEnabled="{Binding IsStopEnabled}" />
             <Button Classes="big button-icon" Content="&#xE13A;" Command="{Binding SelectNextImageCommand}"
                     IsEnabled="{Binding CanSelectNextImage}" />
-
             <Button Classes="big button-icon" Content="&#xE5A6;" Command="{Binding SkipImageCommand}"
                     IsEnabled="{Binding CanDeleteImage}" />
         </StackPanel>
