--- a/Posetrix/Views/SessionWindow.xaml
+++ b/Posetrix/Views/SessionWindow.xaml
@@ -2,7 +2,6 @@
     x:Class="Posetrix.Views.SessionWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:converters="clr-namespace:Posetrix.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:viewmodels="clr-namespace:Posetrix.Core.ViewModels;assembly=Posetrix.Core"
@@ -36,8 +35,8 @@
             <Setter Property="Margin" Value="4,0" />
             <Setter Property="Padding" Value="0" />
         </Style>
-        <converters:BitmapImageLoader x:Key="ImageLoader" />
-        <converters:BooleanToXScaleConverter x:Key="MirrorX" />
+        <!-- <converters:BitmapImageLoader x:Key="ImageLoader" /> -->
+        <!-- <converters:BooleanToXScaleConverter x:Key="MirrorX" /> -->
     </Window.Resources>
     <Grid Margin="20" ShowGridLines="False">
         <Grid.RowDefinitions>
@@ -124,8 +123,8 @@
             Margin="0 20">
             <Image.RenderTransform>
                 <ScaleTransform x:Name="MirrorTransform"
-                                ScaleX="{Binding IsMirroredX, Converter={StaticResource MirrorX}}"
-                                ScaleY="{Binding IsMirroredY, Converter={StaticResource MirrorX}}">
+                                ScaleX="{Binding IsMirroredX, Converter={StaticResource ScaleConverter}}"
+                                ScaleY="{Binding IsMirroredY, Converter={StaticResource ScaleConverter}}">
                 </ScaleTransform>
             </Image.RenderTransform>
         </Image>
