--- a/Posetrix/App.xaml
+++ b/Posetrix/App.xaml
@@ -6,10 +6,10 @@
         <ResourceDictionary>
             <FontFamily x:Key="SegoeUiIcons">pack://application:,,,/Assets/Fonts/#Segoe Fluent Icons</FontFamily>
             <FontFamily x:Key="SegoeUi">pack://application:,,,/Assets/Fonts/#Segoe UI</FontFamily>
+            <BitmapImage x:Key="AppIcon" UriSource="pack://application:,,,/Assets/Icons/avalonia-logo.ico" />
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary
-                    Source="pack://application:,,,/PresentationFramework.Fluent;component/Themes/Fluent.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/Resources/Converters.xaml"></ResourceDictionary>
+                <ResourceDictionary Source="pack://application:,,,/PresentationFramework.Fluent;component/Themes/Fluent.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/Resources/Converters.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
