--- a/Posetrix/Views/MainWindow.xaml
+++ b/Posetrix/Views/MainWindow.xaml
@@ -12,7 +12,7 @@
     MinWidth="400"
     MinHeight="680"
     d:DataContext="{d:DesignInstance Type=core:MainViewModel}"
-    Icon="pack://application:,,,/Assets/Icons/book(1).png"
+    Icon="{StaticResource AppIcon}"
     ResizeMode="NoResize"
     mc:Ignorable="d">
     <Window.Resources>
@@ -34,7 +34,7 @@
             <RowDefinition Height="2*" />
             <!--  Shuffle button.  -->
             <RowDefinition Height="2*" />
-            <!-- Endless mode. -->
+            <!--  Endless mode.  -->
             <RowDefinition Height="2*" />
             <!--  Start a sessiom button.  -->
             <RowDefinition Height="Auto" />
@@ -140,7 +140,7 @@
                 Margin="0,0,10,0"
                 VerticalAlignment="Center"
                 Text="Shuffle images" />
-            <CheckBox IsChecked="{Binding IsShuffleEnabled}" HorizontalAlignment="Center" />
+            <CheckBox HorizontalAlignment="Center" IsChecked="{Binding IsShuffleEnabled}" />
         </UniformGrid>
 
         <!--  Endless mode section.  -->
@@ -149,7 +149,7 @@
                 Margin="0,0,10,0"
                 VerticalAlignment="Center"
                 Text="Endless mode" />
-            <CheckBox IsChecked="True" HorizontalAlignment="Center" />
+            <CheckBox HorizontalAlignment="Center" IsChecked="True" />
         </UniformGrid>
 
         <Grid Grid.Row="5">
