--- a/Posetrix/Views/SettingsWindow.xaml
+++ b/Posetrix/Views/SettingsWindow.xaml
@@ -11,6 +11,7 @@
     MinWidth="480"
     MinHeight="400"
     d:DataContext="{d:DesignInstance Type=viewmodels:SettingsViewModel}"
+    Icon="{StaticResource AppIcon}"
     mc:Ignorable="d">
     <Grid Margin="20" ShowGridLines="False">
         <Grid.RowDefinitions>
@@ -42,14 +43,13 @@
                         Text="App theme" />
                     <ComboBox
                         Name="ChangeTheme"
-                        ItemsSource="{Binding Themes}"
-                        SelectedItem="{Binding SelectedTheme}"
-                        DisplayMemberPath="Name"
                         Grid.Column="1"
                         MinWidth="180"
                         HorizontalAlignment="Right"
-                        SelectionChanged="ComboBox_SelectionChanged">
-                    </ComboBox>
+                        DisplayMemberPath="Name"
+                        ItemsSource="{Binding Themes}"
+                        SelectedItem="{Binding SelectedTheme}"
+                        SelectionChanged="ComboBox_SelectionChanged" />
                 </Grid>
             </Border>
         </Grid>
@@ -97,8 +97,7 @@
             Grid.Row="4"
             Grid.ColumnSpan="2"
             HorizontalAlignment="Center">
-            Source:
-            <Hyperlink NavigateUri="http://www.example.com" RequestNavigate="Hyperlink_RequestNavigate">www.example.com</Hyperlink>
+            Source:<Hyperlink NavigateUri="http://www.example.com" RequestNavigate="Hyperlink_RequestNavigate">www.example.com</Hyperlink>
         </TextBlock>
     </Grid>
 </Window>
