--- a/Posetrix/Resources/Converters.xaml
+++ b/Posetrix/Resources/Converters.xaml
@@ -1,7 +1,7 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:conv="clr-namespace:Posetrix.Converters">
+﻿<ResourceDictionary
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:conv="clr-namespace:Posetrix.Converters">
     <conv:BooleanToXScaleConverter x:Key="ScaleConverter" />
-    <conv:BitmapImageLoader x:Key="ImageLoader"></conv:BitmapImageLoader>
-    <conv:SkiaSharpImageLoader x:Key="SkiaSharpImageLoader"></conv:SkiaSharpImageLoader>
+    <conv:BitmapImageLoader x:Key="ImageLoader" />
 </ResourceDictionary>
