--- a/Posetrix/Views/CustomIntervalView.xaml
+++ b/Posetrix/Views/CustomIntervalView.xaml
@@ -1,14 +1,14 @@
 ﻿<UserControl
-    x:Class="Posetrix.Views.CustomInterval"
+    x:Class="Posetrix.Views.CustomIntervalView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:viewmodels="clr-namespace:Posetrix.Core.ViewModels;assembly=Posetrix.Core"
+    d:DataContext="{d:DesignInstance Type=viewmodels:CustomIntervalViewModel}"
     d:DesignHeight="450"
     d:DesignWidth="800"
-    mc:Ignorable="d"
-    d:DataContext="{d:DesignInstance Type=viewmodels:CustomIntervalViewModel}">
+    mc:Ignorable="d">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
