--- a/Posetrix/Views/CustomIntervalView.xaml
+++ b/Posetrix/Views/CustomIntervalView.xaml
@@ -19,15 +19,15 @@
             Grid.Column="0"
             Height="30"
             Margin="0,0,10,0"
-            Text="{Binding SessionTimer.Hours}" />
+            Text="{Binding Hours}" />
         <TextBox
             Grid.Column="1"
             Height="30"
             Margin="0,0,10,0"
-            Text="{Binding SessionTimer.Minutes}" />
+            Text="{Binding Minutes}" />
         <TextBox
             Grid.Column="2"
             Height="30"
-            Text="{Binding SessionTimer.Seconds}" />
+            Text="{Binding Seconds}" />
     </Grid>
 </UserControl>
