--- a/Posetrix/Views/PredefinedIntervalsView.xaml
+++ b/Posetrix/Views/PredefinedIntervalsView.xaml
@@ -8,6 +8,11 @@
     d:DesignWidth="800"
     mc:Ignorable="d">
     <Grid>
+        <Grid.Resources>
+            <Style BasedOn="{StaticResource {x:Type ToggleButton}}" TargetType="RadioButton">
+                <Setter Property="HorizontalAlignment" Value="Stretch" />
+            </Style>
+        </Grid.Resources>
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
             <ColumnDefinition />
@@ -16,35 +21,27 @@
             <ColumnDefinition />
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
-        <ToggleButton
+        <RadioButton
             Grid.Column="0"
             Margin="0,0,4,0"
-            HorizontalAlignment="Stretch"
             Content="30s"
             IsChecked="True" />
-        <ToggleButton
+        <RadioButton
             Grid.Column="1"
             Margin="0,0,4,0"
-            HorizontalAlignment="Stretch"
             Content="45s" />
-        <ToggleButton
+        <RadioButton
             Grid.Column="2"
             Margin="0,0,4,0"
-            HorizontalAlignment="Stretch"
             Content="1m" />
-        <ToggleButton
+        <RadioButton
             Grid.Column="3"
             Margin="0,0,4,0"
-            HorizontalAlignment="Stretch"
             Content="2m" />
-        <ToggleButton
+        <RadioButton
             Grid.Column="4"
             Margin="0,0,4,0"
-            HorizontalAlignment="Stretch"
             Content="5m" />
-        <ToggleButton
-            Grid.Column="5"
-            HorizontalAlignment="Stretch"
-            Content="10m" />
+        <RadioButton Grid.Column="5" Content="10m" />
     </Grid>
 </UserControl>
